--- a/style.css
+++ b/style.css
@@ -1,1 +1,56 @@
 @charset "utf-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background-color: #cecece;
+}
+
+div#interface{
+    background-color: white;
+    box-sizing: border-box;
+    border: 1px solid black;
+    width: 80%;
+    display: block;
+    float: center;
+    padding: 10%;
+    margin: 10%;
+}
+
+
+h1{
+    font-family: Arial, sans-serif;
+    font-size: 32pt;
+    text-decoration: underline;
+    font-size: bolder;
+}
+
+p{
+    font-size: 12pt;
+    font-family: Arial, sans-serif;
+    text-align: justify;
+    text-indent: 5%;
+}
+
+footer#rodape{
+    border-top: 1px solid black;
+    padding: 5%;
+}
+
+footer#rodape p{
+    clear: both;
+    text-align: center;
+    font-style: italic;
+}
+
+a{
+    color: #000000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
