--- a/projeto/style.css
+++ b/projeto/style.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap);
 @font-face {
 	font-family:'FonteLogo';
-	src: url("bubblegum-sans-regular.otf");
+	src: url("projeto/._bubblegum-sans-regular.otf");
 }
 
 /* Configurações Gerais */
