--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -254,6 +254,7 @@ header#cabecalho {
 	height: 150px;
 	background-color: #ffffff;
 	margin-bottom: 0px;
+	overflow: hidden;
 }
 
 header#cabecalho img#icone{
