--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap);
 @font-face {
 	font-family:'FonteLogo';
-	src: url("..fontes\._bubblegum-sans-regular.otf");
+	src: url("https://werbster99.github.io/Feira-do-Ceara/fontes/bubblegum-sans-regular.otf");
 }
 
 /* Desktop */
