--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -28,6 +28,7 @@ div#interface{
     display: block;
     float: center;
     margin: 0 auto 0 auto;
+	overflow: hidden;
 }
 
 h1{
@@ -48,15 +49,17 @@ p{
 
 header#cabecalho {
 	border-bottom: 1px solid;
-	height: 150px;
+	height: 160px;
 	background-color: #ffffff;
 	margin-bottom: 0px;
+	position: relative;
+	box-sizing: border-box;
 }
 
 header#cabecalho img#icone{
 	position: absolute;
-	left: 75%;
-	top: -2%;
+	left: 80%;
+	top: 0%;
     height: 150px;
 }
 
@@ -86,15 +89,15 @@ nav#menu ul {
 	text-transform: uppercase;
 	position: absolute;
 	top: -1.9%;
-	left: 50%;
+	left: 40%;
 }
 			
 nav#menu li {
 	display: inline-block;
 	background: #dddddd;
 	padding: 12px;
-	margin: 20px;
-	margin-right: -15px;
+	margin-top: 0px;
+	margin-right: 5px;
 	transition: background-color 1s;
 }
 			
@@ -119,8 +122,9 @@ nav#menu a:hover {
 
 section#corpo{
     display: block;
-    width: 55%;
-    float: left;	
+    width: 65%;
+	box-sizing: border-box;
+	float: left;	
     border-right: 1px solid #606060;			
     padding-right: 2.5%;			
     padding-left: 2.5%;	
@@ -162,9 +166,10 @@ header#cabecalho-artigo h3 {
 aside#lateral{
     display: block;
     width: 30%;	
-    position: relative;
+	box-sizing: border-box;
+	position: relative;
     float: right;			
-    margin-right: 5%;
+    margin-right: 2.5%;
     margin-left: auto;
     background-color: #dddddd;			
     margin-top: 30px;			
@@ -189,6 +194,7 @@ aside#lateral h2 {
 
 footer#rodape p {
 	clear: both;
+	box-sizing: border-box;
 	border-top: 1px solid #606060;
 	text-align: center;
 	padding-top: 10px;
@@ -226,10 +232,10 @@ div#interface{
     background-color: white;
     box-sizing: border-box;
     border: 1px solid black;
-    width: 80%;
+    width: 90%;
     display: block;
     float: center;
-    margin: 0 auto 0 auto;
+    margin: 0px auto 0px auto;
 	overflow: hidden;
 }
 
@@ -238,6 +244,10 @@ h1{
     font-size: 32pt;
     text-decoration: underline;
     font-size: bolder;
+}
+
+h2{
+	font-family: Arial, sans-serif;	
 }
 
 p{
@@ -251,6 +261,7 @@ p{
 
 header#cabecalho {
 	border-bottom: 1px solid;
+	box-sizing: border-box;
 	height: 150px;
 	background-color: #ffffff;
 	margin-bottom: 0px;
@@ -258,10 +269,11 @@ header#cabecalho {
 }
 
 header#cabecalho img#icone{
-	position: relative;
+	position: absolute;
 	left: 75%;
-	top: -2%;
+	top: -1.9%;
     height: 150px;
+	overflow: hidden;
 }
 
 header#cabecalho h1{
@@ -280,7 +292,7 @@ header#cabecalho h2{
 	padding: 0px;
 	margin-top: 0px;
 	position: relative;
-	top: 0px;
+	top: 0px;	
 }
 
 /*Configuração do menu(dentro do cabeçalho)  */
@@ -289,14 +301,15 @@ nav#menu ul {
 	list-style: none;
 	text-transform: uppercase;
 	position: absolute;
-	top: -1.9%;
-	left: 50%;
+	top: -2.9%;
+	left: 45%;
+	float: center;
 }
 			
 nav#menu li {
 	display: inline-block;
 	background: #dddddd;
-	padding: 12px;
+	padding: 6px;
 	margin: 20px;
 	margin-right: -15px;
 	transition: background-color 1s;
@@ -323,8 +336,9 @@ nav#menu a:hover {
 
 section#corpo{
     display: block;
-    width: 55%;
-    float: left;	
+    width: 60%;
+	box-sizing: border-box;
+	float: left;	
     border-right: 1px solid #606060;			
     padding-right: 2.5%;			
     padding-left: 2.5%;	
@@ -366,7 +380,8 @@ header#cabecalho-artigo h3 {
 aside#lateral{
     display: block;
     width: 30%;	
-    position: relative;
+	box-sizing: border-box;
+	position: relative;
     float: right;			
     margin-right: 5%;
     margin-left: auto;
@@ -393,7 +408,221 @@ aside#lateral h2 {
 
 footer#rodape p {
 	clear: both;
+	box-sizing: border-box;
 	border-top: 1px solid #606060;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-style: italic;
+
+}
+
+a{
+    color: #000000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+}
+
+/* Mobile */
+
+@media(max-width: 767px){
+
+/* Configurações Gerais */
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background-color: #cecece;
+}
+
+div#interface{
+    background-color: white;
+    box-sizing: border-box;
+    border: 1px solid black;
+    width: 100%;
+    display: block;
+    float: center;
+    margin: 0 auto 0 auto;
+	overflow: hidden;
+}
+
+h1{
+    font-family: Arial, sans-serif;
+    font-size: 32pt;
+    text-decoration: underline;
+    font-size: bolder;
+}
+
+h2{
+	font-family: Arial, sans-serif;
+}
+
+p{
+    font-size: 12pt;
+    font-family: Arial, sans-serif;
+    text-align: justify;
+    text-indent: 5%;
+}
+
+/* Configuração do Cabeçalho */
+
+header#cabecalho {
+	border-bottom: 1px solid;
+	box-sizing: border-box;
+	height: 150px;
+	background-color: #ffffff;
+	margin-bottom: 0px;
+	overflow: hidden;
+}
+
+header#cabecalho img#icone{
+	display: none;
+}
+
+header#cabecalho h1{
+	font-family: 'FonteLogo', sans-serif;
+	font-size: 30pts;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.6);	
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
+header#cabecalho h2{
+	font-family: 'Titillium Web', sans-serif;
+	font-size: 15pts;
+	color: #888888;
+	padding: 0px;
+	margin-top: 0px;
+	position: relative;
+	top: 0px;	
+}
+
+/*Configuração do menu(dentro do cabeçalho)  */
+
+nav#menu ul {
+	list-style: none;
+	text-transform: uppercase;
+	position: absolute;
+	top: -2.9%;
+	left: 40%;
+	float: center;
+	displaY: none;
+}
+			
+nav#menu li {
+	display: inline-block;
+	background: #dddddd;
+	padding: 6px;
+	margin: 20px;
+	margin-right: -15px;
+	transition: background-color 1s;
+}
+			
+nav#menu li:hover {
+	background-color: #606060;
+}			
+			
+nav#memu h1 {
+	display:none;
+			}
+			
+nav#menu a {
+	color: #000000;
+	text-decoration: none;
+}	
+
+nav#menu a:hover {
+		color: #ffffff;
+}
+
+/* Configuração do corpo (section) */
+
+section#corpo{
+    display: block;
+    width: 100%;
+    float: left;	
+	box-sizing: border-box;
+	border-right: 1px solid #606060;			
+	border-bottom: 1px solid #606060;
+	padding-right: 2.5%;			
+    padding-left: 2.5%;	
+}
+
+article#noticia-principal h2 {
+	font-size: 12pt;
+	color: #606060;
+	background-color: #dddddd; 
+	padding: 5px 0px 5px 10px;
+	margin: 10px 0px 10px 0px;
+}
+
+header#cabecalho-artigo h1 {
+	font-family: 'FonteLogo';
+	font-size: 20pt;
+	color: #606060;
+	margin-bottom: 0px;
+}
+
+header#cabecalho-artigo h2 {
+	font-size: 13pt;
+	color: #cecece;
+	background-color: #ffffff;
+	margin: 0px;
+}
+
+.direita {
+	text-align: right;
+}
+
+header#cabecalho-artigo h3 {
+	font-size: 12pt;
+	color: #606060;
+}
+
+/* Configuração da lateral (aside) */
+
+aside#lateral{
+    display: block;
+	box-sizing: border-box;
+	width: 100%;	
+    position: relative;
+    float: left;			
+    margin-right: 2.5%;
+    margin-left: auto;
+    background-color: #dddddd;			
+    margin-top: 30px;			
+    box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
+}
+
+aside#lateral h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
+}
+    
+aside#lateral h2 {
+    background-color: #606060;
+    font-size: 13pt;
+    color: #ffffff;
+    padding: 5px;
+}
+    
+/* Configuração do rodapé (footer) */
+
+footer#rodape p {
+	clear: both;
+	border-top: 1px solid #606060;
+	box-sizing: border-box;
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -410,4 +639,3 @@ a:hover {
 }
 
 }
-
