--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -17,7 +17,9 @@
 }
 
 body{
-    background-color: #dddddd;
+    background:url("../imagens/praia4.png") no-repeat;
+	background-size: 100% 100%;
+	background-position: center;
 }
 
 div#interface{
@@ -97,7 +99,6 @@ nav#menu li {
 
 nav#menu li#l1{
 	margin-right: 0px;
-	padding-right:
 }
 
 nav#menu li:hover {
@@ -271,7 +272,9 @@ a:hover {
 }
 
 body{
-    background-color: #cecece;
+    background: url("../imagens/praia3.png");
+	background-size: 100% 100%;
+	background-position: center;
 }
 
 div#interface{
@@ -293,7 +296,7 @@ h1{
 }
 
 h2{
-	font-family: Arial, sans-serif;	
+	font-family: Arial, sans-serif;
 }
 
 p{
@@ -307,25 +310,22 @@ p{
 
 div#inicio{
 	width: 90%;
-	height: 250px;
 	margin-left: 5%;
 	margin-right: 5%;
 	box-sizing: border-box;
 	border: 1px solid black;
 	background: url("../imagens/fortaleza-noite2.png") no-repeat;
+	background-size: 100% 100%;
+	height: 250px;
 	background-position: center;
-	background-size: 100%;
-	padding: 0px;
 }
 
 header#cabecalho {
-	border-bottom: 1px solid;
-	height: 250px;
 	margin-bottom: 0px;
-	position: relative;
 	box-sizing: border-box;
 	margin: 0px;
 	padding: 0px;
+	border-bottom: none;
 }
 
 /*Configuração do menu(dentro do cabeçalho)  */
@@ -333,29 +333,36 @@ header#cabecalho {
 nav#menu ul {
 	list-style: none;
 	text-transform: uppercase;
-	position: absolute;
-	top: -2.9%;
-	width: 60%;
-	margin-left: 10%;
-	margin-right: 10%;
+	top: 1%;
+	text-align: center;
+	box-sizing: border-box;
+	border-bottom-style: none;
+	width: 100%;
+	border-bottom: none;
 }
 			
 nav#menu li {
 	display: inline-block;
 	background: #dddddd;
-	padding: 6px;
-	margin: 20px;
-	margin-right: -15px;
+	padding: 1%;
+	text-align: center;
+	margin-top: 0px;
+	margin-right: 10px;
 	transition: background-color 1s;
+	font-family: 'FonteLogo';
 }
-			
+
+nav#menu li#l1{
+	margin-right: 0px;	
+}
+
 nav#menu li:hover {
 	background-color: #606060;
 }			
 			
 nav#memu h1 {
 	display:none;
-			}
+}
 			
 nav#menu a {
 	color: #000000;
@@ -363,16 +370,17 @@ nav#menu a {
 }	
 
 nav#menu a:hover {
-		color: #ffffff;
+	color: #ffffff;
 }
 
 /* Configuração do corpo (section) */
 
 section#corpo{
     display: block;
-    width: 60%;
+    width: 55%;
 	box-sizing: border-box;
 	float: left;	
+	padding-top: 30px;
     border-right: 1px solid #606060;			
     padding-right: 2.5%;			
     padding-left: 2.5%;	
@@ -382,7 +390,7 @@ article#noticia-principal h2 {
 	font-size: 12pt;
 	color: #606060;
 	background-color: #dddddd; 
-	padding: 5px 0px 5px 10px;
+	padding: 5px ;
 	margin: 10px 0px 10px 0px;
 }
 
@@ -391,6 +399,7 @@ header#cabecalho-artigo h1 {
 	font-size: 20pt;
 	color: #606060;
 	margin-bottom: 0px;
+	text-align: center;
 }
 
 header#cabecalho-artigo h2 {
@@ -413,16 +422,50 @@ header#cabecalho-artigo h3 {
 
 aside#lateral{
     display: block;
-    width: 30%;	
+    width: 35%;	
 	box-sizing: border-box;
 	position: relative;
-    float: right;			
-    margin-right: 5%;
-    margin-left: auto;
+    float: left;			
+    margin-right: auto;
+    margin-left: 5%;
     background-color: #dddddd;			
     margin-top: 30px;			
     box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
 }
+
+table#tabela {
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	float: center;
+}
+
+table#tabela td {
+	border: 1px solid #606060; 
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
+	width: 10%;
+}
+
+table#tabela td.ce {
+	color: #ffffff;
+	background-color: #606060;
+	vertical-align: top;
+	font-weight:  bold;
+}
+
+table#tabela td.cd {
+	background-color: #cecece;
+	
+}
+
+table#tabela caption {
+	color: black;
+	font-size: 13pt;
+	font-weight: bolder;
+	padding: 10px;
+	font-family: Arial, sans-serif;
+}	
 
 aside#lateral h1 {
     font-family: 'FonteLogo', sans-serif;
@@ -437,7 +480,17 @@ aside#lateral h2 {
     color: #ffffff;
     padding: 5px;
 }
-    
+
+aside#lateral li{
+	list-style: none;
+	font-family: 'FonteLogo';
+	padding: 2%;
+}
+
+aside#lateral span{
+	float: right;
+}
+
 /* Configuração do rodapé (footer) */
 
 footer#rodape p {
@@ -448,7 +501,6 @@ footer#rodape p {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	font-style: italic;
-
 }
 
 a{
@@ -474,7 +526,7 @@ a:hover {
 }
 
 body{
-    background-color: #cecece;
+    background-color: #dddddd;
 }
 
 div#interface{
@@ -484,7 +536,7 @@ div#interface{
     width: 100%;
     display: block;
     float: center;
-    margin: 0 auto 0 auto;
+    margin: 0px auto 0px auto;
 	overflow: hidden;
 }
 
@@ -508,36 +560,21 @@ p{
 
 /* Configuração do Cabeçalho */
 
-header#cabecalho {
-	border-bottom: 1px solid;
+div#inicio{
+	width: 100%;
 	box-sizing: border-box;
-	height: 150px;
-	background-color: #ffffff;
+	border: 1px solid black;
+	background: url("../imagens/Fortaleza.png") no-repeat;
+	background-size: 100% 100%;
+	height: 250px;
+	background-position: center;
+}
+
+header#cabecalho {
 	margin-bottom: 0px;
-	overflow: hidden;
-}
-
-header#cabecalho img#icone{
-	display: none;
-}
-
-header#cabecalho h1{
-	font-family: 'FonteLogo', sans-serif;
-	font-size: 30pts;
-	color: #606060;
-	text-shadow: 1px 1px 1px rgba(0,0,0,.6);	
+	box-sizing: border-box;
+	margin: 0px;
 	padding: 0px;
-	margin-bottom: 0px;
-}
-
-header#cabecalho h2{
-	font-family: 'Titillium Web', sans-serif;
-	font-size: 15pts;
-	color: #888888;
-	padding: 0px;
-	margin-top: 0px;
-	position: relative;
-	top: 0px;	
 }
 
 /*Configuração do menu(dentro do cabeçalho)  */
@@ -545,29 +582,35 @@ header#cabecalho h2{
 nav#menu ul {
 	list-style: none;
 	text-transform: uppercase;
-	position: absolute;
-	top: -2.9%;
-	left: 40%;
-	float: center;
-	displaY: none;
+	top: 1%;
+	text-align: center;
+	box-sizing: border-box;
+	border-bottom-style: none;
+	width: 100%;
 }
 			
 nav#menu li {
 	display: inline-block;
 	background: #dddddd;
-	padding: 6px;
-	margin: 20px;
-	margin-right: -15px;
+	padding: 1%;
+	text-align: center;
+	margin-top: 0px;
+	margin-right: 10px;
 	transition: background-color 1s;
+	font-family: 'FonteLogo';
 }
-			
+
+nav#menu li#l1{
+	margin-right: 0px;	
+}
+
 nav#menu li:hover {
 	background-color: #606060;
 }			
 			
 nav#memu h1 {
 	display:none;
-			}
+}
 			
 nav#menu a {
 	color: #000000;
@@ -575,7 +618,7 @@ nav#menu a {
 }	
 
 nav#menu a:hover {
-		color: #ffffff;
+	color: #ffffff;
 }
 
 /* Configuração do corpo (section) */
@@ -583,19 +626,20 @@ nav#menu a:hover {
 section#corpo{
     display: block;
     width: 100%;
-    float: left;	
 	box-sizing: border-box;
-	border-right: 1px solid #606060;			
-	border-bottom: 1px solid #606060;
-	padding-right: 2.5%;			
+	float: left;	
+	padding-top: 30px;
+    border-right: 1px solid #606060;			
+    padding-right: 2.5%;			
     padding-left: 2.5%;	
+	border-bottom: 1px solid black;
 }
 
 article#noticia-principal h2 {
 	font-size: 12pt;
 	color: #606060;
 	background-color: #dddddd; 
-	padding: 5px 0px 5px 10px;
+	padding: 5px ;
 	margin: 10px 0px 10px 0px;
 }
 
@@ -604,6 +648,7 @@ header#cabecalho-artigo h1 {
 	font-size: 20pt;
 	color: #606060;
 	margin-bottom: 0px;
+	text-align: center;
 }
 
 header#cabecalho-artigo h2 {
@@ -626,16 +671,48 @@ header#cabecalho-artigo h3 {
 
 aside#lateral{
     display: block;
+    width: 100%;	
 	box-sizing: border-box;
-	width: 100%;	
-    position: relative;
+	position: relative;
     float: left;			
-    margin-right: 2.5%;
-    margin-left: auto;
     background-color: #dddddd;			
     margin-top: 30px;			
     box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
+	border-top: 1px solid black;
 }
+
+table#tabela {
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	float: center;
+}
+
+table#tabela td {
+	border: 1px solid #606060; 
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
+	width: 10%;
+}
+
+table#tabela td.ce {
+	color: #ffffff;
+	background-color: #606060;
+	vertical-align: top;
+	font-weight:  bold;
+}
+
+table#tabela td.cd {
+	background-color: #cecece;
+}
+
+table#tabela caption {
+	color: black;
+	font-size: 13pt;
+	font-weight: bolder;
+	padding: 10px;
+	font-family: Arial, sans-serif;
+}	
 
 aside#lateral h1 {
     font-family: 'FonteLogo', sans-serif;
@@ -650,13 +727,23 @@ aside#lateral h2 {
     color: #ffffff;
     padding: 5px;
 }
-    
+
+aside#lateral li{
+	list-style: none;
+	font-family: 'FonteLogo';
+	padding: 2%;
+}
+
+aside#lateral span{
+	float: right;
+}
+
 /* Configuração do rodapé (footer) */
 
 footer#rodape p {
 	clear: both;
-	border-top: 1px solid #606060;
 	box-sizing: border-box;
+	border-top: 1px solid #606060;
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -673,3 +760,4 @@ a:hover {
 }
 
 }
+
