--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -51,223 +51,236 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Desktop */
+/* Mobile */
 
-@media(min-width: 992px){
+@media(max-width: 767px){
 
-/* Configurações Específicas */
-
-body{
-	background:url("../imagens/praia4.png") no-repeat;
-	background-size: 100% 100%;
-	background-position: center;
-}
+	/* Configurações Específicas */
 	
-div#interface{
-	background-color: white;
-	box-sizing: border-box;
-	border: 1px solid black;
-	width: 80%;
-	display: block;
-	float: center;
-	margin: 0px auto 0px auto;
-	overflow: hidden;
-}
+	body{
+		background-color: #dddddd;
+	}
 	
-/* Configuração do Cabeçalho */
-
-div#inicio{
-	width: 80%;
-	margin-left: 10%;
-	margin-right: 10%;
-	box-sizing: border-box;
-	border: 1px solid black;
-	background: url("../imagens/fortaleza-noite2.png");
-	background-size: 100%;
-	height: 250px;
-	background-position: center;
-}
-
-header#cabecalho {
-	margin-bottom: 0px;
-	box-sizing: border-box;
-	margin: 0px;
-	padding: 0px;
-}
-
-/*Configuração do menu(dentro do cabeçalho)  */
-
-nav#menu ul {
-	list-style: none;
-	text-transform: uppercase;
-	top: 1%;
-	text-align: center;
-	box-sizing: border-box;
-	border-bottom-style: none;
-	width: 100%;
-	border-bottom: 5px solid white;
-	border: none;
-}
-			
-nav#menu li {
-	display: inline-block;
-	background: #dddddd;
-	padding: 1%;
-	text-align: center;
-	margin-top: 0px;
-	margin-right: 10px;
-	transition: background-color 1s;
-	font-family: 'FonteLogo';
-}
-
-nav#menu li#l1{
-	margin-right: 0px;
-}
-
-nav#menu li:hover {
-	background-color: #606060;
-}			
-			
-nav#memu h1 {
-	display:none;
-}
-			
-nav#menu a {
-	color: #000000;
-	text-decoration: none;
-}	
-
-nav#menu a:hover {
-	color: #ffffff;
-}
-
-/* Configuração do corpo (section) */
-
-section#corpo{
-    display: block;
-    width: 65%;
-	box-sizing: border-box;
-	float: left;	
-	padding-top: 30px;
-    border-right: 1px solid #606060;			
-    padding-right: 2.5%;			
-    padding-left: 2.5%;	
-}
-
-article#noticia-principal h2 {
-	font-size: 12pt;
-	color: #606060;
-	background-color: #dddddd; 
-	padding: 5px ;
-	margin: 10px 0px 10px 0px;
-}
-
-header#cabecalho-artigo h1 {
-	font-family: 'FonteLogo';
-	font-size: 20pt;
-	color: #606060;
-	margin-bottom: 0px;
-	text-align: center;
-	text-decoration: none;
-}
-
-header#cabecalho-artigo h2 {
-	font-size: 13pt;
-	color: #cecece;
-	background-color: #ffffff;
-	margin: 0px;
-}
-
-.direita {
-	text-align: right;
-}
-
-header#cabecalho-artigo h3 {
-	font-size: 12pt;
-	color: #606060;
-}
-
-/* Configuração da lateral (aside) */
-
-aside#lateral{
-    display: block;
-    width: 30%;	
-	box-sizing: border-box;
-	position: relative;
-    float: left;			
-    margin-right: auto;
-    margin-left: 2.5%;
-    background-color: #dddddd;			
-    margin-top: 30px;			
-    box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
-}
-
-table#tabela {
-	border: 1px solid #606060;
-	border-spacing: 0px;
-	float: center;
-}
-
-table#tabela td {
-	border: 1px solid #606060; 
-	padding: 10px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10%;
-}
-
-table#tabela td.ce {
-	color: #ffffff;
-	background-color: #606060;
-	vertical-align: top;
-	font-weight:  bold;
-}
-
-table#tabela td.cd {
-	background-color: #cecece;
-}
-
-table#tabela caption {
-	color: black;
-	font-size: 13pt;
-	font-weight: bolder;
-	padding: 10px;
-	font-family: Arial, sans-serif;
-}	
-
-aside#lateral h1 {
-    font-family: 'FonteLogo', sans-serif;
-    font-size: 20pt;
-    color: #606060;
-    margin-top: 0px;
-}
-    
-aside#lateral h2 {
-    background-color: #606060;
-    font-size: 13pt;
-    color: #ffffff;
-    padding: 5px;
-}
-
-aside#lateral li{
-	list-style: none;
-	font-family: 'FonteLogo';
-	padding: 2%;
-}
-
-aside#lateral span{
-	float: right;
-}
-
-aside#lateral{ 
-	color: #000000;
-	text-decoration: none;
-}
-
-aside#lateral a:hover{
-	color: rgb(61, 11, 61);
-}
-
+	div#interface{
+		background-color: white;
+		box-sizing: border-box;
+		border: 1px solid black;
+		width: 100%;
+		display: block;
+		float: center;
+		margin: 0px auto 0px auto;
+		overflow: hidden;
+	}
+	
+	/* Configuração do Cabeçalho */
+	
+	div#inicio{
+		width: 100%;
+		box-sizing: border-box;
+		border: 1px solid black;
+		background: url("../imagens/fortaleza-noite3(2).png") no-repeat;
+		background-size: 100% 100%;
+		height: 150px;
+		background-position: center;
+	}
+	
+	header#cabecalho {
+		margin-bottom: 0px;
+		box-sizing: border-box;
+		margin: 0px;
+		padding: 0px;
+	}
+	
+	/*Configuração do menu(dentro do cabeçalho)  */
+	
+	nav#menu ul {
+		list-style: none;
+		text-transform: uppercase;
+		top: 1%;
+		text-align: center;
+		box-sizing: border-box;
+		border-bottom-style: none;
+		width: 100%;
+	}
+				
+	nav#menu li {
+		display: inline-block;
+		background: #dddddd;
+		padding: 1%;
+		text-align: center;
+		margin-top: 0px;
+		margin-right: 10px;
+		transition: background-color 1s;
+		font-family: 'FonteLogo';
+	}
+	
+	nav#menu li#l1{
+		margin-right: 0px;	
+	}
+	
+	nav#menu li:hover {
+		background-color: #606060;
+	}			
+				
+	nav#memu h1 {
+		display:none;
+	}
+				
+	nav#menu a {
+		color: #000000;
+		text-decoration: none;
+	}	
+	
+	nav#menu a:hover {
+		color: #ffffff;
+	}
+	
+	/* Configuração do corpo (section) */
+	
+	section#corpo{
+		display: block;
+		width: 100%;
+		box-sizing: border-box;
+		float: left;	
+		padding-top: 30px;
+		border-right: 1px solid #606060;			
+		padding-right: 2.5%;			
+		padding-left: 2.5%;	
+		border-bottom: 1px solid black;
+	}
+	
+	article#noticia-principal h2 {
+		font-size: 12pt;
+		color: #606060;
+		background-color: #dddddd; 
+		padding: 5px ;
+		margin: 10px 0px 10px 0px;
+	}
+	
+	header#cabecalho-artigo h1 {
+		font-family: 'FonteLogo';
+		font-size: 20pt;
+		color: #606060;
+		margin-bottom: 0px;
+		text-align: center;
+		text-decoration: none;
+	}
+	
+	header#cabecalho-artigo h2 {
+		font-size: 13pt;
+		color: #cecece;
+		background-color: #ffffff;
+		margin: 0px;
+	}
+	
+	.direita {
+		text-align: right;
+	}
+	
+	header#cabecalho-artigo h3 {
+		font-size: 12pt;
+		color: #606060;
+	}
+	
+	/* Configuração da lateral (aside) */
+	
+	aside#lateral{
+		display: block;
+		width: 100%;	
+		box-sizing: border-box;
+		position: relative;
+		float: left;			
+		background-color: #dddddd;			
+		margin-top: 30px;			
+		box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
+		border-top: 1px solid black;
+	}
+	
+	table#tabela {
+		border: 1px solid #606060;
+		border-spacing: 0px;
+		float: center;
+	}
+	
+	table#tabela td {
+		border: 1px solid #606060; 
+		padding: 10px;
+		text-align: center;
+		vertical-align: middle;
+		width: 10%;
+	}
+	
+	table#tabela td.ce {
+		color: #ffffff;
+		background-color: #606060;
+		vertical-align: top;
+		font-weight:  bold;
+	}
+	
+	table#tabela td.cd {
+		background-color: #cecece;
+	}
+	
+	table#tabela caption {
+		color: black;
+		font-size: 13pt;
+		font-weight: bolder;
+		padding: 10px;
+		font-family: Arial, sans-serif;
+	}	
+	
+	figure img#Foto{
+		width: 50%;
+		position: relative;
+		float: center;
+	}
+	
+	figure img#foto{
+		width: 100%;
+	}
+	
+	figure figcaption{
+		font-family: Arial, sans-serif;
+		text-align: center;
+		background-color: rgba(0, 0, 0, 0.4);
+		top: 0px;
+		box-sizing: border-box;
+		transition: opacity 0.5s;
+		opacity: 0;
+	}
+	
+	figure figcaption:hover{
+		opacity: 1;
+		color: rgb(124, 6, 6);
+	}
+	
+	aside#lateral h1 {
+		font-family: 'FonteLogo', sans-serif;
+		font-size: 20pt;
+		color: #606060;
+		margin-top: 0px;
+	}
+		
+	aside#lateral h2 {
+		background-color: #606060;
+		font-size: 13pt;
+		color: #ffffff;
+		padding: 5px;
+	}
+	
+	aside#lateral li{
+		font-weight: bolder;	
+	}
+	
+	aside#lateral li{
+		list-style: none;
+		font-family: 'FonteLogo';
+		padding: 2%;
+	}
+	
+	aside#lateral span{
+		float: right;
+	}
 }
 
 /* Tablet */
@@ -453,6 +466,32 @@ table#tabela caption {
 	font-family: Arial, sans-serif;
 }	
 
+figure.foto-legenda{
+	box-sizing: border-box;
+	border: 1px solid black;
+	box-shadow: 1px 1px 4px black;
+	margin-bottom: 10px;
+}
+
+figure img#foto{
+	width: 100%;
+}
+
+figure figcaption{
+	font-family: Arial, sans-serif;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.4);
+	top: 0px;
+	box-sizing: border-box;
+	transition: opacity 0.5s;
+	opacity: 0;
+}
+
+figure figcaption:hover{
+	opacity: 1;
+	color: rgb(124, 6, 6);
+}
+
 aside#lateral h1 {
     font-family: 'FonteLogo', sans-serif;
     font-size: 20pt;
@@ -468,6 +507,10 @@ aside#lateral h2 {
 }
 
 aside#lateral li{
+	font-weight: bolder;	
+}
+
+aside#lateral li{
 	list-style: none;
 	font-family: 'FonteLogo';
 	padding: 2%;
@@ -479,48 +522,52 @@ aside#lateral span{
 
 }
 
-/* Mobile */
+/* Desktop */
 
-@media(max-width: 767px){
+@media(min-width: 992px){
 
 /* Configurações Específicas */
-
+	
 body{
-    background-color: #dddddd;
-}
-
-div#interface{
-    background-color: white;
-    box-sizing: border-box;
-    border: 1px solid black;
-    width: 100%;
-    display: block;
-    float: center;
-    margin: 0px auto 0px auto;
-	overflow: hidden;
-}
-
-/* Configuração do Cabeçalho */
-
-div#inicio{
-	width: 100%;
-	box-sizing: border-box;
-	border: 1px solid black;
-	background: url("../imagens/fortaleza-noite3(2).png") no-repeat;
+	background:url("../imagens/praia4.png") no-repeat;
 	background-size: 100% 100%;
-	height: 150px;
 	background-position: center;
 }
-
+		
+div#interface{
+	background-color: white;
+	box-sizing: border-box;
+	border: 1px solid black;
+	width: 80%;
+	display: block;
+	float: center;
+	margin: 0px auto 0px auto;
+	overflow: hidden;
+}
+		
+/* Configuração do Cabeçalho */
+	
+div#inicio{
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	box-sizing: border-box;
+	border: 1px solid black;
+	background: url("../imagens/fortaleza-noite2.png");
+	background-size: 100%;
+	height: 250px;
+	background-position: center;
+}
+	
 header#cabecalho {
 	margin-bottom: 0px;
 	box-sizing: border-box;
 	margin: 0px;
 	padding: 0px;
 }
-
+	
 /*Configuração do menu(dentro do cabeçalho)  */
-
+	
 nav#menu ul {
 	list-style: none;
 	text-transform: uppercase;
@@ -529,8 +576,10 @@ nav#menu ul {
 	box-sizing: border-box;
 	border-bottom-style: none;
 	width: 100%;
+	border-bottom: 5px solid white;
+	border: none;
 }
-			
+				
 nav#menu li {
 	display: inline-block;
 	background: #dddddd;
@@ -541,42 +590,41 @@ nav#menu li {
 	transition: background-color 1s;
 	font-family: 'FonteLogo';
 }
-
+	
 nav#menu li#l1{
-	margin-right: 0px;	
+	margin-right: 0px;
 }
-
+	
 nav#menu li:hover {
 	background-color: #606060;
 }			
-			
+				
 nav#memu h1 {
 	display:none;
 }
-			
+				
 nav#menu a {
 	color: #000000;
 	text-decoration: none;
 }	
-
+	
 nav#menu a:hover {
 	color: #ffffff;
 }
-
+	
 /* Configuração do corpo (section) */
-
+	
 section#corpo{
-    display: block;
-    width: 100%;
+	display: block;
+	width: 65%;
 	box-sizing: border-box;
 	float: left;	
 	padding-top: 30px;
-    border-right: 1px solid #606060;			
-    padding-right: 2.5%;			
-    padding-left: 2.5%;	
-	border-bottom: 1px solid black;
+	border-right: 1px solid #606060;			
+	padding-right: 2.5%;			
+	padding-left: 2.5%;	
 }
-
+	
 article#noticia-principal h2 {
 	font-size: 12pt;
 	color: #606060;
@@ -584,7 +632,7 @@ article#noticia-principal h2 {
 	padding: 5px ;
 	margin: 10px 0px 10px 0px;
 }
-
+	
 header#cabecalho-artigo h1 {
 	font-family: 'FonteLogo';
 	font-size: 20pt;
@@ -593,43 +641,44 @@ header#cabecalho-artigo h1 {
 	text-align: center;
 	text-decoration: none;
 }
-
+	
 header#cabecalho-artigo h2 {
 	font-size: 13pt;
 	color: #cecece;
 	background-color: #ffffff;
 	margin: 0px;
 }
-
+	
 .direita {
 	text-align: right;
 }
-
+	
 header#cabecalho-artigo h3 {
 	font-size: 12pt;
 	color: #606060;
 }
-
+	
 /* Configuração da lateral (aside) */
-
+	
 aside#lateral{
-    display: block;
-    width: 100%;	
+	display: block;
+	width: 30%;	
 	box-sizing: border-box;
 	position: relative;
-    float: left;			
-    background-color: #dddddd;			
-    margin-top: 30px;			
-    box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
-	border-top: 1px solid black;
+	float: left;			
+	margin-right: auto;
+	margin-left: 2.5%;
+	background-color: #dddddd;			
+	margin-top: 30px;			
+	box-shadow: 2px 2px 2px rgba(0,0,0,.5);			
 }
-
+	
 table#tabela {
 	border: 1px solid #606060;
 	border-spacing: 0px;
 	float: center;
 }
-
+	
 table#tabela td {
 	border: 1px solid #606060; 
 	padding: 10px;
@@ -637,18 +686,18 @@ table#tabela td {
 	vertical-align: middle;
 	width: 10%;
 }
-
+	
 table#tabela td.ce {
 	color: #ffffff;
 	background-color: #606060;
 	vertical-align: top;
 	font-weight:  bold;
 }
-
+	
 table#tabela td.cd {
 	background-color: #cecece;
 }
-
+	
 table#tabela caption {
 	color: black;
 	font-size: 13pt;
@@ -656,29 +705,70 @@ table#tabela caption {
 	padding: 10px;
 	font-family: Arial, sans-serif;
 }	
-
+	
+figure.foto-legenda{
+	box-sizing: border-box;
+	border: 1px solid black;
+	box-shadow: 1px 1px 4px black;
+	margin-bottom: 10px;
+}
+	
+figure img#foto{
+	width: 100%;
+}
+	
+figure figcaption{
+	font-family: Arial, sans-serif;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.4);
+	top: 0px;
+	box-sizing: border-box;
+	transition: opacity 0.5s;
+	opacity: 0;
+}
+	
+figure figcaption:hover{
+	opacity: 1;
+	color: rgb(124, 6, 6);
+}
+	
 aside#lateral h1 {
-    font-family: 'FonteLogo', sans-serif;
-    font-size: 20pt;
-    color: #606060;
-    margin-top: 0px;
+	font-family: 'FonteLogo', sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-top: 0px;
 }
-    
+		
 aside#lateral h2 {
-    background-color: #606060;
-    font-size: 13pt;
-    color: #ffffff;
-    padding: 5px;
+	background-color: #606060;
+	font-size: 13pt;
+	color: #ffffff;
+	padding: 5px;
 }
-
+	
 aside#lateral li{
 	list-style: none;
 	font-family: 'FonteLogo';
 	padding: 2%;
 }
-
+	
+aside#lateral li{
+	font-weight: bolder;	
+}
+	
 aside#lateral span{
 	float: right;
 }
-
+	
+aside#lateral{ 
+	color: #000000;
+	text-decoration: none;
 }
+	
+aside#lateral a:hover{
+	color: rgb(61, 11, 61);
+}
+	
+}
+
+
